fix: spacings

--- a/src/modules/situations/situation.module.css
+++ b/src/modules/situations/situation.module.css
@@ -22,7 +22,7 @@
   padding: var(--spacings-small);
 }
 .icon {
-  margin-right: var(--spacings-medium);
+  margin-top: var(--spacings-small);
 }
 
 .dialog {
